<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_acerca_de"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dama.fcarvajal.materialdesign.AcercaDeActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/toolbar"
        android:gravity="bottom"
        android:layout_margin="@dimen/add_margin" >

        <TextView
            android:id="@+id/add_tvNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aad_nombre"
            android:textAlignment="center"
            android:padding="@dimen/add_padding"
            android:textSize="@dimen/aad_nombre"/>

        <TextView
            android:id="@+id/add_tvEmpleo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aad_empleo"
            android:textAlignment="center"
            android:padding="@dimen/add_padding"
            android:textSize="@dimen/aad_empleo" />

        <TextView
            android:id="@+id/add_tvCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aad_correo"
            android:textAlignment="center"
            android:padding="@dimen/add_padding"
            android:textSize="@dimen/aad_correo"/>

    </LinearLayout>

</RelativeLayout>
